--- a/index.html
+++ b/index.html
@@ -40,6 +40,41 @@
 	color: white;
 	font-size: 26px;
 }
+		
+		h1 {
+			font-family: 'BebasNeueRegular';
+	color: transparent;
+   -webkit-text-stroke-width: 1px;
+   -webkit-text-stroke-color: white;
+	font-size: 70px;
+	letter-spacing: 20px; 
+		}
+		
+		h2 {
+			font-family: 'BebasNeueRegular';
+			font-size: 55px;
+			color: white;
+		}
+		
+		h3 {
+			font-family: 'Krub';
+			font-size: 26px;
+			color: white;
+		}
+		
+		h4 {
+			font-family: 'Krub';
+			font-size: 20px;
+			font-weight: bold;
+			color: #79BFA4;
+		}
+		
+		p {
+			font-family: 'Krub';
+			font-size: 20px;
+			color: white;
+			line-height: 20px;
+		}
 
 
 	</style>
