--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	text-align: center;
 	margin: 0;
 	padding: 0;
+	font-weight: lighter;
 }
 		
 	#myVideo {
@@ -45,8 +46,8 @@
 	font-size: 26px;
 }
 		
-		h1 {
-			font-family: 'BebasNeueRegular';
+	h1 {
+	font-family: 'BebasNeueRegular';
 	color: transparent;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: white;
@@ -92,7 +93,7 @@
 </head>
 
 <body>
-	
+	<div>
 	<video autoplay muted loop id="myVideo">
   		<source src="C:\Users\Sinai\Documents\atlas lab website\bneh.mp4" type="video/mp4">
   		Your browser does not support HTML5 video.
@@ -106,6 +107,10 @@
 			<a href="#">Contact</a>
 		</nav>
 </div>
+	</div>
+	
+
+	
 	
 </body>
 </html>
